Details
Description
There is no Close/Maximize/Minimize buttons in Firefox 33. If you guess where the buttons would be, they still work, they're just not visible. Sorry if this has already been reported.
Attachments
Issue Links
- is duplicated by
-
CORE-10697 Firefox can't display minimize, maximize end exit buttons. Firefox from rosapps ver. 39, ROS ver. 0.4.0 RC1
-
- Resolved
-
-
CORE-13893 Firefox drawInTitlebar window title bar is missing X minimize maximize
-
- Resolved
-
-
CORE-12382 No min/max/close buttons in Firefox
-
- Resolved
-
- relates to
-
CORE-16788 Firefox 48, sometimes it is not possible to minimize the browser via titlebar
-
- Resolved
-
-
CORE-10855 [WIN32SS] Regression when drawing window caption bars
-
- Resolved
-