[0.4.13][WIN32SS] Fix Mask for Draw Frame States CORE-8808

Fixes drawing of caption bar buttons (min/max/close in Mozilla Firefox titlebar when its menubar is disabled).
See CORE-8808.

The fix is a partial port of 0.4.14-dev-1314-g acf135d16d2aede3c12edc4ef47033baf5540751
I left out all changes to the logging and took only the essence of this patch.