win32ss/user/ntuser/draw.c
@@ -757,7 +757,7 @@ BOOL FASTCALL UITOOLS95_DFC_ButtonCheckRadio(HDC dc, LPRECT r, UINT uFlags, BOOL
 /* Ported from WINE20020904 */
 BOOL FASTCALL UITOOLS95_DrawFrameButton(HDC hdc, LPRECT rc, UINT uState)
 {
-    switch(uState & 0xff)
+    switch(uState & 0x1f)
     {
         case DFCS_BUTTONPUSH:
             return UITOOLS95_DFC_ButtonPush(hdc, rc, uState);
@@ -787,7 +787,7 @@ BOOL FASTCALL UITOOLS95_DrawFrameCaption(HDC dc, LPRECT r, UINT uFlags)
     RECT myr;
     INT bkmode;
     WCHAR Symbol;
-    switch(uFlags & 0xff)
+    switch(uFlags & 0xf)
     {
         case DFCS_CAPTIONCLOSE:
 		Symbol = 'r';
@@ -854,7 +854,7 @@ BOOL FASTCALL UITOOLS95_DrawFrameScroll(HDC dc, LPRECT r, UINT uFlags)
     RECT myr;
     INT bkmode;
     WCHAR Symbol;
-    switch(uFlags & 0xff)
+    switch(uFlags & 0x1f)
     {
         case DFCS_SCROLLCOMBOBOX:
         case DFCS_SCROLLDOWN:
@@ -957,7 +957,7 @@ BOOL FASTCALL UITOOLS95_DrawFrameMenu(HDC dc, LPRECT r, UINT uFlags)
     RECT myr;
     INT cxy;
     cxy = UITOOLS_MakeSquareRect(r, &myr);
-    switch(uFlags & 0xff)
+    switch(uFlags & 0x1f)
     {
         case DFCS_MENUARROWUP:
             Symbol = '5';
@@ -1000,8 +1000,8 @@ BOOL FASTCALL UITOOLS95_DrawFrameMenu(HDC dc, LPRECT r, UINT uFlags)
     /* save font */
     hOldFont = NtGdiSelectFont(dc, hFont);
 
-    if ((uFlags & 0xff) == DFCS_MENUARROWUP ||
-        (uFlags & 0xff) == DFCS_MENUARROWDOWN )
+    if ((uFlags & 0x1f) == DFCS_MENUARROWUP ||
+        (uFlags & 0x1f) == DFCS_MENUARROWDOWN )
     {
 #if 0
        if (uFlags & DFCS_INACTIVE)
